[package]
name = "ccs811-rs"
authors = ["Ioan Herisanu <ioan.herisanu.dev@gmail.com>"]
categories = ["no-std"]
description = "ams CCS811 Indoor air quality sensor"
documentation = "https://docs.rs/ccs811-rs"
homepage = "https://github.com/iohe/ccs811-rs"
keywords = ["ccs811-rs"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/iohe/ccs811-rs.git"
version = "0.1.1"
edition = "2018"

[badges]
travis-ci = { repository = "iohe/ccs811-rs", branch = "master" }
coveralls = { repository = "iohe/ccs811-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.1"

[dev-dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
linux-embedded-hal = "0.3.0"
rppal = { version = "0.11.3", features = ["hal"] }

